--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 				<div class="row justify-content-center">
 					<div class="col-12 column">
 						<img src="./images/icon-sedans.svg" alt="sedans"></img>
-						<div>Sedans</div>
-						<div>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</div>
+						<div class="title">Sedans</div>
+						<div class="text">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</div>
 						<div class="rounded-pill button">Learn more</div>
 					</div>
 
 					<div class="col-12 column">
             <img src="./images/icon-suvs.svg" alt="suvs"></img>
-            <div>SUVs</div>
-            <div>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</div>
+            <div class="title">SUVs</div>
+            <div class="text">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</div>
 						<div class="rounded-pill button">Learn more</div>
 					</div>
 					<div class="col-12 column">
             <img src="./images/icon-luxury.svg" alt="luxury"></img>
-            <div>Luxury</div>
-            <div>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</div>
+            <div class="title">Luxury</div>
+            <div class="text">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</div>
 						<div class="rounded-pill button">Learn more</div>
 					</div>
 				</div>
